cmake: update Eigen3 variable name
Change-Id: I1bcd1cb90c1e1125d4bbb253b50ed8b65d5ae2ec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,7 +210,7 @@ if (EIGEN3_FOUND)
       "${EIGEN3_VERSION_STRING}")
   endif (EIGEN3_VERSION VERSION_LESS 3.1.0)
 
-  message("-- Found Eigen version ${EIGEN_VERSION_STRING}: ${EIGEN_INCLUDE_DIRS}")
+  message("-- Found Eigen version ${EIGEN_VERSION_STRING}: ${EIGEN3_INCLUDE_DIRS}")
   # Ensure that only MPL2 licensed code is part of the default build.
   message("")
   message("   ===============================================================")
