change ios check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,8 +176,8 @@ if (IOS)
   message(STATUS "Building Ceres for iOS platform: ${IOS_PLATFORM}")
 
   # Ceres requires at least iOS 7.0+.
-  if (IOS_DEPLOYMENT_TARGET VERSION_LESS 7.0)
-    message(FATAL_ERROR "Unsupported iOS version: ${IOS_DEPLOYMENT_TARGET}, Ceres "
+  if (IOS_SDK_VERSION VERSION_LESS 7.0)
+    message(FATAL_ERROR "Unsupported iOS version: ${IOS_SDK_VERSION}, Ceres "
       "requires at least iOS version 7.0")
   endif()
 
